~~~~~~~~~~~~~~~~~~~~~~
version 1.6
~~~~~~~~~~~~~~~~~~~~~~

* fixed issue where 0.x.x.x could show up on banlist
* added OTX reputation IP lists to Artillery
* sped up artillery boot time significantly when ban is turned off
* sped up time for URL feeds and put them into one central function

~~~~~~~~~~~~~~~~~~~~~~
version 1.5.1
~~~~~~~~~~~~~~~~~~~~~~

* fixed old git repo to new git repo at binarydefense

~~~~~~~~~~~~~~~~~~~~~~
version 1.5
~~~~~~~~~~~~~~~~~~~~~~

* disabled yaml config as this breaks configuration reading
* added better handling and ipv4 checking for remote feeds
* changed threat feed to pull every 1 hour instead of 24 hours
* fixed sort issue and malformed IP addresses due to sort not checking properly

~~~~~~~~~~~~~~~~~~~~~~
version 1.4.1
~~~~~~~~~~~~~~~~~~~~~~

* added a new function for sorting IP addresses when adding to the banlist, when an IP address is added, it will sort the text file banlist after an append action
* fixed an issue when artillery would initially launch it would not honor the ban() function for check to see if the IPs are already there. 
* fixed an issue when honeypot ban was specified to no, it would not populate the banlist even if it banned or not

~~~~~~~~~~~~~~~~~~~~~~
version 1.4
~~~~~~~~~~~~~~~~~~~~~~

* added the ability to remove old records after a certain interval - this will overwrite the banlist and start from scratch based on certain time intervals - options are available under the config files
* added multiple feeds based on the script from http://www.deepimpact.io/blog/splunkandfreeopen-sourcethreatintelligencefeeds - much appreciated. Artillery can now pull from multiple banlist IP addresses and will continue to add onto these as time goes on
* added new functions to handle multiple different aspects including downloading files and new additions for parsing through banlist ips
* turned banning to OFF by default and added threat intelligence feed to ON as defaults